Fix sign-out button wrapping

--- a/app/(main)/components/FriendsNavbar/styles.module.scss
+++ b/app/(main)/components/FriendsNavbar/styles.module.scss
@@ -67,4 +67,5 @@
   padding: 0.75rem 1rem;
   cursor: pointer;
   margin-left: auto;
+  white-space: nowrap;
 }
